// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component matches snapshot (default props) 1`] = `
<div
  className="fdsBadge wrap--singleLine fdsBadge--s"
>
  badge
</div>
`;

exports[`Badge component matches snapshot (set all props) 1`] = `
<div
  className="fdsBadge wrap--singleLine fdsBadge--xs"
  data-test="test"
>
  badge
</div>
`;
